software-center (1.1.27) UNRELEASED; urgency=low

  * softwarecenter/view/channelpane.py:
    - fix crash when gdk window is not (yet) available

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 14 Apr 2010 21:59:27 +0200

software-center (1.1.26) lucid; urgency=low

  [ Gary Lasker ]
  * softwarecenter/app.py,
    softwarecenter/view/softwarepane.py:
    - correctly refresh the availablepane view on a
      change to software sources (LP: #559539)
  * softwarecenter/app.py,
    softwarecenter/view/availablepane.py,
    softwarecenter/view/navhistory.py:
    - clear navigation history on a software channel refresh
      because packages in the history stack might no longer
      be available
  
  [ Michael Vogt ]
  * softwarecenter/view/appdetailsview.py:
    - fix displaying removal warning when listview interface buttons
      are used (LP: #561018)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Apr 2010 22:57:30 +0200

software-center (1.1.25) lucid; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/viewswitcher.py:
    - fix intermittent AttributeError if a model doesn't
      exist when checking node expanded state (LP: #554388)
  * softwarecenter/view/viewswitcher.py:
    - fix nasty list view errors when disabling partner
      repository (LP: #556995)
  * softwarecenter/view/appview.py:
    - fix intermittent AttributeError in row selection
      (LP: #552224)
  * softwarecenter/view/availablepane.py:
    - fix double call to set_category method
  * softwarecenter/view/channelpane.py,
    softwarecenter/view/installedpane.py:
    - fix bug where clicking the "Search Results" navigation
      button in the "Installed View" or in a PPA/channel
      view has no effect (LP: #559732)
  * softwarecenter/view/channelpane.py:
    - fix bug where selecting a new PPA/channel while
      a search is in effect in the current PPA/channel
      does not display the new PPA/channel (LP: #559742)
  
  [ Michael Vogt ]
  * softwarecenter/apt/aptcache.py: