@@ -2,6 +2,12 @@ software-center (1.1.27) UNRELEASED; urgency=low
 
   * softwarecenter/view/channelpane.py:
     - fix crash when gdk window is not (yet) available
+  * softwarecenter/view/appdetailsview.py, 
+    softwarecenter/distro/__init__.py,
+    softwarecenter/distro/Ubuntu.py:
+    - do not show "Free" for packages from the partner repository, we 
+      don't know the status of the freeness there (LP: #552830)
+    
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 14 Apr 2010 21:59:27 +0200
 
